# game

./: .clang-format  .clangd  .cmake-format  .cmake-format.py  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.sh  make  run.sh  tmux.sh
.github/workflows/: ci.yaml  linux-debug.yaml  linux-test.yaml  linux-test.yaml_  macos-test.yaml  matrix-test.yaml  test.yaml  windows-test.yaml
assets/fonts/: ascii.xcf  bitmap.xcf
assets/shaders/: color.frag.glsl  font.frag.glsl  font.vert.glsl  quad.vert.glsl
script/: mkres.sh  run.sh  test.sh  tmux.sh
shaders/: color.frag.glsl  quad.vert.glsl
src/: CMakeLists.txt  common.cppx  common.hpp  gl.c  gl.hpp  key.cpp  key.hpp  main.cpp  physics.cpp  physics.hpp  render.cp  render.cpp  render.cppx  render.hpp  shader.cpp  shader.hpp  shader_src.hpp  shaders.hpp  stb_image.c  stb_image.h  types.hpp  vector.hpp  window.hpp  x11.cpp  x11.cppx
src/glad/: gl.c  gl.h  glx.c  glx.h
src/header/: string.hpp
src/headers/: fstream.hpp  shader.hpp
src/render/: digit.cpp  digit.hpp  digits.cpp  digits.hpp  quad.cpp  quad.hpp  quads.cpp  quads.hpp
test/: CMakeLists.txt  gui_window.cpp  gui_window.cpp_  shader.cpp
